# crop_tools

./: .gitignore  LICENSE  README.md  how_to_use.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy_docs.yaml
crop_face/: __init__.py  __main__.py
crop_tools/: __main__.py
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: crop_tools.rst  modules.rst
docs/source/headings/: api_reference.rst  get_started.rst  getting_started.rst
sample_data/: sample.py
src/crop_tools/: __init__.py
