[metadata]
name=crop_tools
version=0.0.1
author=Yuu-Miino-NUE
description=Tools to crop by OpenCV
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/Yuu-Miino-NUE/crop_tools
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package=find:
install_requires =
    opencv-python
