[metadata]
name=crop_tools
version=0.1.0
author=Yuu-Miino-NUE
description=Tools to crop by OpenCV
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/Yuu-Miino-NUE/crop_tools
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
python_requires=>=3.10

[options]
package=find:
install_requires =
    opencv-python>=4.8,<5.0